# goit-ds-hw-02

./: README.md  create_db.py  create_tables.sql  pyproject.toml  queries.py  seed.py
