[project]
name = "goit-ds-hw-02"
version = "0.1.0"
description = ""
authors = [
    {name = "Yaroslav",email = "you@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
package-mode = false
dependencies = [
    "faker (>=40.11.1,<41.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"